--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "serve-favicon": "~2.3.0",
     "vue": "^2.1.10",
     "vue-loader": "^11.1.3",
+    "vue-router": "^2.2.1",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
